Closed Bug 607075 Opened 15 years ago Closed 13 years ago

crash in gfxWindowsPlatform::UpdateRenderMode

Categories

(Core :: Graphics, defect)

All
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: marcia, Assigned: drexler)

Details

(Keywords: crash, Whiteboard: [startupcrash])

Crash Data

Attachments

(1 file)

Seen while reviewing crash stats. http://tinyurl.com/25dpdxb links to the crashes, which are Win XP. Frame Module Signature [Expand] Source 0 xul.dll gfxWindowsPlatform::UpdateRenderMode gfx/thebes/gfxWindowsPlatform.cpp:272 1 xul.dll gfxWindowsPlatform::gfxWindowsPlatform gfx/thebes/gfxWindowsPlatform.cpp:221 2 mozalloc.dll mozalloc.dll@0x104f 3 xul.dll nsComponentManagerImpl::KnownModule::Load xpcom/components/nsComponentManager.cpp:961 4 xul.dll nsFactoryEntry::GetFactory xpcom/components/nsComponentManager.cpp:1936 5 xul.dll nsComponentManagerImpl::CreateInstance xpcom/components/nsComponentManager.cpp:1213 6 xul.dll CallCreateInstance obj-firefox/xpcom/build/nsComponentManagerUtils.cpp:157 7 xul.dll nsBaseWidget::BaseCreate widget/src/xpwidgets/nsBaseWidget.cpp:211 8 xul.dll nsWindow::Create widget/src/windows/nsWindow.cpp:548 9 xul.dll nsWebShellWindow::Initialize xpfe/appshell/src/nsWebShellWindow.cpp:219 10 xul.dll nsAppShellService::JustCreateTopWindow xpfe/appshell/src/nsAppShellService.cpp:440 11 xul.dll nsAppShellService::CreateHiddenWindow xpfe/appshell/src/nsAppShellService.cpp:182 12 xul.dll nsAppStartup::CreateHiddenWindow toolkit/components/startup/src/nsAppStartup.cpp:160 13 xul.dll XRE_main toolkit/xre/nsAppRunner.cpp:3611 14 firefox.exe wmain toolkit/xre/nsWindowsWMain.cpp:129 15 firefox.exe __tmainCRTStartup obj-firefox/memory/jemalloc/crtsrc/crtexe.c:591 16 kernel32.dll BaseProcessStart
Component: GFX: Color Management → Graphics
QA Contact: color-management → thebes
This crash suggests it failed to get the pref service.. that's strange.
STR: - close firefox - unzip omni.jar from firefox folder - zip files again (I used 7zip) - rename new file to omni.jar and copy it to firefox folder - start firefox - bp-823b00fc-2463-43b0-92f9-8f1c52101221 4.0b9 2010-12-21
There is a spike in crashes from 4.0b9pre/20110108. It is #3 top crasher in this build. The regression range for the spike is: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f93c5678d642&tochange=8f1c39add00f
blocking2.0: --- → ?
Keywords: regression, topcrash
It is a startup crash so don't take into account comment 3.
blocking2.0: ? → ---
Keywords: topcrash
Crash Signature: [@ gfxWindowsPlatform::UpdateRenderMode() ]
Still appears in recent builds. In the past week... + 7.0.1 - 74 crashes + 8.0 - 30 crashes + 8.0.1 - 7 crashes
96.7% of crashes happen on Windows 7. The first frames of the stack trace now look like: Frame Module Signature Source 0 xul.dll gfxWindowsPlatform::UpdateRenderMode gfx/thebes/gfxWindowsPlatform.cpp:469 1 xul.dll gfxWindowsPlatform::gfxWindowsPlatform gfx/thebes/gfxWindowsPlatform.cpp:363 2 xul.dll gfxPlatform::Init gfx/thebes/gfxPlatform.cpp:291 3 xul.dll gfxPlatform::GetPlatform gfx/thebes/gfxPlatform.cpp:255 4 xul.dll ShouldUseImageSurfaces image/src/imgFrame.cpp:114 5 xul.dll imgFrame::Init image/src/imgFrame.cpp:199 6 xul.dll mozilla::image::RasterImage::InternalAddFrame image/src/RasterImage.cpp:1085 7 xul.dll mozilla::image::RasterImage::EnsureFrame image/src/RasterImage.cpp:1223 8 xul.dll mozilla::image::nsGIFDecoder2::BeginImageFrame image/decoders/nsGIFDecoder2.cpp:229 9 xul.dll mozilla::image::nsGIFDecoder2::WriteInternal image/decoders/nsGIFDecoder2.cpp:957 10 xul.dll mozilla::image::RasterImage::WriteToDecoder image/src/RasterImage.cpp:2373 11 xul.dll mozilla::image::RasterImage::AddSourceData image/src/RasterImage.cpp:1479 12 xul.dll mozilla::image::RasterImage::WriteToRasterImage image/src/RasterImage.cpp:2809 13 xul.dll nsPipeInputStream::ReadSegments xpcom/io/nsPipe3.cpp:799 14 xul.dll imgRequest::OnDataAvailable image/src/imgRequest.cpp:1097 15 xul.dll ProxyListener::OnDataAvailable image/src/imgLoader.cpp:2105 16 xul.dll nsJARChannel::OnDataAvailable modules/libjar/nsJARChannel.cpp:955 17 xul.dll nsInputStreamPump::OnStateTransfer netwerk/base/src/nsInputStreamPump.cpp:514 18 xul.dll nsInputStreamPump::OnInputStreamReady netwerk/base/src/nsInputStreamPump.cpp:402 19 xul.dll nsInputStreamReadyEvent::Run xpcom/io/nsStreamUtils.cpp:114 20 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:657 21 xul.dll NS_ProcessNextEvent_P obj-firefox/xpcom/build/nsThreadUtils.cpp:245 22 xul.dll nsThread::Shutdown xpcom/threads/nsThread.cpp:499 23 xul.dll nsRunnableMethodImpl<unsigned int obj-firefox/dist/include/nsThreadUtils.h:345 24 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:657 25 xul.dll NS_ProcessNextEvent_P obj-firefox/xpcom/build/nsThreadUtils.cpp:245 More reports at: https://crash-stats.mozilla.com/report/list?signature=gfxWindowsPlatform%3A%3AUpdateRenderMode%28%29
Keywords: regression
OS: Windows XP → Windows 7
Hardware: x86 → All
Summary: Firefox/4.0b8pre startup crash in [@ gfxWindowsPlatform::UpdateRenderMode() ] → crash in gfxWindowsPlatform::UpdateRenderMode
Whiteboard: [startupcrash]
14.0.1 data shows some correlation to Avast: gfxWindowsPlatform::UpdateRenderMode()|EXCEPTION_ACCESS_VIOLATION_READ (54 crashes) 20% (11/54) vs. 6% (7473/121204) wrc@avast.com Based on the module breakdown it appears 7.0.1456.418 is the problematic version. 96% (52/54) vs. 16% (19053/121204) snxhk.dll 0% (0/54) vs. 0% (21/121204) 5.1.864.0 0% (0/54) vs. 0% (1/121204) 5.1.874.0 0% (0/54) vs. 0% (156/121204) 5.1.889.0 0% (0/54) vs. 0% (1/121204) 6.0.1027.0 0% (0/54) vs. 0% (63/121204) 6.0.1091.0 0% (0/54) vs. 0% (252/121204) 6.0.1125.0 0% (0/54) vs. 0% (234/121204) 6.0.1203.0 0% (0/54) vs. 0% (1/121204) 6.0.1270.0 0% (0/54) vs. 1% (612/121204) 6.0.1289.0 0% (0/54) vs. 1% (1531/121204) 6.0.1367.0 0% (0/54) vs. 0% (3/121204) 6.0.1372.0 0% (0/54) vs. 0% (4/121204) 6.0.945.0 0% (0/54) vs. 0% (246/121204) 6.0.999.0 0% (0/54) vs. 0% (1/121204) 7.0.1401.0 0% (0/54) vs. 0% (19/121204) 7.0.1403.0 0% (0/54) vs. 0% (243/121204) 7.0.1407.0 0% (0/54) vs. 4% (4495/121204) 7.0.1426.0 0% (0/54) vs. 0% (1/121204) 7.0.1438.167 0% (0/54) vs. 0% (2/121204) 7.0.1442.339 0% (0/54) vs. 0% (1/121204) 7.0.1443.359 0% (0/54) vs. 0% (10/121204) 7.0.1447.390 0% (0/54) vs. 1% (675/121204) 7.0.1451.402 0% (0/54) vs. 0% (12/121204) 7.0.1455.186 96% (52/54) vs. 9% (10469/121204) 7.0.1456.418 Right now the crash volume is somewhat low in 14.0.1, but I can keep an eye and see if it creeps up.
Attached patch patchSplinter Review
This crash is currently up to #32 as of today for 18.0a1. This patch mainly removes the possibility of a call on a null |factory| which is the culprit for the crash reports.
Attachment #659394 - Flags: review?(bjacob)
Comment on attachment 659394 [details] [diff] [review] patch Review of attachment 659394 [details] [diff] [review]: ----------------------------------------------------------------- The patch looks good, and simple enough to make me comfortable r+ing it. But in general, try to find a reviewer who either already reviewed surrounding code, or contributed surrounding code. Both can be figured out by using `hg annotate`. For DirectX stuff, a good choice is usually Bas Schouten.
Attachment #659394 - Flags: review?(bjacob) → review+
Assignee: nobody → andrew.quartey
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: