Bug 607075 - Fix logic in gfxWindowsPlatform::UpdateRenderMode r=bjacob